Majority of layout work finished

--- a/index.liquid
+++ b/index.liquid
@@ -3,4 +3,11 @@ layout: layout.liquid
 title: 11ty Boilerplate
 ---
 
-<h1>Yet Another 11ty <strong>Boilerplate</strong></h1>
+<h2>Yet Another <strong>Space Blog</strong></h2>
+<div>
+	<a href="/Stars/"" title="A post about stars">Click Here</a>
+</div>
+<div>
+	<a href="/Earths/"" title="A post about stars">Click Here</a>
+</div>
+<img alt="torc" src="/images/torc.png">
