--- a/styles/screen.css
+++ b/styles/screen.css
@@ -38,7 +38,7 @@ h1 {
     letter-spacing: -2px;
 }
 
-h1 strong {
+strong {
     background: rgb(34,193,195);
     background: linear-gradient(45deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);
     -webkit-background-clip: text;
