--- a/_includes/blog.liquid
+++ b/_includes/blog.liquid
@@ -1,4 +1,7 @@
-﻿
+---
+title: blog post
+---
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,7 +10,7 @@
   <title>{{ title }}</title>
   <link rel="stylesheet" href="/styles/screen.css">
 </head>
-<body>
+<body class="post">
   <nav>
     <ul>
       <li><a href="/" title="Go home">Home</a></li>
