--- a/index.liquid
+++ b/index.liquid
@@ -1,13 +1,14 @@
 ---
 layout: layout.liquid
-title: 11ty Boilerplate
+title: Home
 ---
 
 <h2>Yet Another <strong>Space Blog</strong></h2>
+<p>Welcome to my blog!</p>
 <div>
-	<a href="/Stars/"" title="A post about stars">Click Here</a>
+	<p><a href="/Stars/"" title="A post about stars">Click Here</a> for a post about stars</p>
 </div>
 <div>
-	<a href="/Earths/"" title="A post about stars">Click Here</a>
+	</p><a href="/Earths/"" title="A post about stars">Click Here</a> for a post about earth-like planets</p>
 </div>
-<img alt="torc" src="/images/torc.png">
+<img alt="Solar System" src="/images/system.jpg">
