--- a/styles/screen.css
+++ b/styles/screen.css
@@ -1,7 +1,7 @@
 body {
     font-family: Helvetica, sans-serif;
     color: #EAE8FF;
-    background: #2D3142;
+    background-color: #2D3142;
     padding: 0 40px;
     text-align: center;
 }
@@ -38,6 +38,13 @@ h1 {
     letter-spacing: -2px;
 }
 
+a {
+    background: rgb(34,193,195);
+    background: linear-gradient(45deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
 strong {
     background: rgb(34,193,195);
     background: linear-gradient(45deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);
@@ -47,4 +54,12 @@ strong {
 
 img.about {
     opacity: 0.5;
+}
+
+img.neutron {
+    width: 50%;
+}
+
+img.kepler {
+    width: 50%;
 }
